Rename some vars, remove unused k3s stuff

--- a/hosts/cloud-init-test/.gitignore
+++ b/hosts/cloud-init-test/.gitignore
@@ -2,5 +2,6 @@ iterraform.tfvars
 terraform-plugin-proxmox.log
 ansible.ini
 files/smbcredentials
+files/cloud-init-test1-user_data_cloud_init.cfg
 terraform.tfstate
 terraform.tfvars
